--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,18 @@ body {
     transform: translateY(0) scale(1);
   }
 }
+
+.bg-hero {
+  background-image: url("/public/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.grad-hero {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: -36px;
+  left: 0;
+  opacity: 0.3;
+}
