--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@ body {
 }
 
 .bg-hero {
-  background-image: url("/public/bg.jpg");
+  background-image: url("/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
