--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,6 @@ body {
   animation-timeline: view();
   animation-range: entry 0% cover 35%;
 }
-
 @keyframes fade-in-up-keyframes {
   from {
     opacity: 0;
@@ -52,6 +51,19 @@ body {
     transform: translateY(0) scale(1);
   }
 }
+
+/* .glow {
+  animation: glowDown linear;
+  animation-timeline: view(10%);
+}
+@keyframes glowDown {
+  from {
+    box-shadow: 0 0 0 rgba(56, 189, 248, 0.7);
+  }
+  to {
+    box-shadow: 0 0 32px rgba(56, 189, 248, 0.7);
+  }
+} */
 
 .bg-hero {
   background-image: url("/bg.jpg");
@@ -66,4 +78,56 @@ body {
   top: -36px;
   left: 0;
   opacity: 0.3;
+}
+
+/* Skills Image Slider */
+.banner {
+  width: 100%;
+  height: 50vh;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+.banner .slider {
+  position: absolute;
+  width: 200px;
+  height: 250px;
+  top: 40%;
+  left: 50%;
+
+  transform-style: preserve-3d;
+  transform: translateY(-40%) translateX(-50%) perspective(1000px);
+  /* transform-origin: 0 0 0; */
+  animation: autoRun 20s linear infinite;
+}
+@keyframes autoRun {
+  from {
+    transform: translateY(-40%) translateX(-50%) perspective(1000px)
+      rotateY(0deg);
+  }
+  to {
+    transform: translateY(-40%) translateX(-50%) perspective(1000px)
+      rotateY(360deg);
+  }
+}
+.banner .slider .item {
+  position: absolute;
+  inset: 0 0 0 0;
+}
+.banner .slider .item:first-child {
+  transform: rotateY(calc((1 - 1) * (360 / 4) * 1deg)) translateZ(350px);
+}
+.banner .slider .item:nth-child(2) {
+  transform: rotateY(calc((2 - 1) * (360 / 4) * 1deg)) translateZ(350px);
+}
+.banner .slider .item:nth-child(3) {
+  transform: rotateY(calc((3 - 1) * (360 / 4) * 1deg)) translateZ(350px);
+}
+.banner .slider .item:nth-child(4) {
+  transform: rotateY(calc((4 - 1) * (360 / 4) * 1deg)) translateZ(350px);
+}
+.banner .slider .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
